# Coel

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
cmake/: config.cmake.in
examples/: CMakeLists.txt
examples/cuiui/: CMakeLists.txt  main.cpp  testing.cpp  win32_d2d.cpp  win32_dwm.cpp
examples/cuiui/custom_components/: utility.hpp  win32_opengl_window.hpp  win32_window.hpp  window.hpp
examples/cuiui/math/: matrix.hpp  rect.hpp  types.hpp  utility.hpp  vector.hpp
examples/imgui/: CMakeLists.txt  main.cpp
examples/imgui/impl/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_impl_wm.h
include/coel/: coel.hpp  window.hpp
include/coel/opengl/: context.hpp  core.hpp
include/coel/vulkan/: buffer.hpp  command.hpp  core.hpp  device.hpp  image.hpp  instance.hpp  pipeline.hpp  surface.hpp  swapchain.hpp
src/: coel.cpp
src/cuiui/: CMakeLists.txt
src/cuiui/include/cuiui/: cuiui.hpp
src/cuiui/include/cuiui/platform/: win32.hpp
src/cuiui/src/: ui_context.cpp
src/cuiui/src/platform/win32/: window.cpp
src/opengl/: context.cpp
src/vulkan/: buffer.cpp  command.cpp  core.cpp  device.cpp  image.cpp  instance.cpp  pipeline.cpp  surface.cpp  swapchain.cpp
